[gd_scene load_steps=11 format=2]

[ext_resource path="res://logic.gd" type="Script" id=1]
[ext_resource path="res://peddler_1.png" type="Texture" id=2]
[ext_resource path="res://peddler_2.png" type="Texture" id=3]
[ext_resource path="res://iknowaghost.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=5]
size = 125
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.447059, 0.0666667, 0.6, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.92549, 0, 0.168627, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.890196, 0, 0.917647, 1 )

[sub_resource type="DynamicFont" id=6]
size = 49
font_data = ExtResource( 4 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="logic" type="Node"]
script = ExtResource( 1 )

[node name="ask_button" type="Button" parent="."]
margin_left = 54.0
margin_top = 798.0
margin_right = 663.0
margin_bottom = 1032.0
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "PREGUNTA"

[node name="respuesta" type="Label" parent="."]
margin_left = 123.0
margin_top = 514.0
margin_right = 618.0
margin_bottom = 645.0
custom_fonts/font = SubResource( 6 )
text = "Preg√∫ntale al Peddler
"
align = 1
valign = 1
autowrap = true

[node name="peddler" type="AnimatedSprite" parent="."]
position = Vector2( 348, 228 )
frames = SubResource( 1 )

[node name="peddler_animation_timer" type="Timer" parent="."]

[connection signal="pressed" from="ask_button" to="." method="_on_ask_button_pressed"]
[connection signal="timeout" from="peddler_animation_timer" to="." method="_on_peddler_animation_timer_timeout"]
